# pc-regression

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
pc_regression.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pcregression/: pcregression.py
tests/: islr_college_test_data.csv  test.py
