[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pc_regression"
version = "0.0.1"
authors = [{name="Ishan Dhanani", email="ishandhanani@gmail.com"}]
description = "A package for principal component regression. Basically a way to practice creating packages in Python"
readme = "README.md"
requires-python = ">3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ishandhanani/pc-regression"
"Bug Tracker" = "https://github.com/ishandhanani/pc-regression/issues"
