[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pc_regression"
version = "0.0.2"
authors = [{name="Ishan Dhanani", email="ishandhanani@gmail.com"}]
description = "A package for principal component regression. A way to practice building packages and deploying them onto pypi"
readme = "README.md"
requires-python = ">3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-learn>=1.1.2",
    "pytest>=7.2.0",
    "pandas>=1.4.2",
    "numpy>=1.21.5",
]

[project.urls]
"Homepage" = "https://github.com/ishandhanani/pc-regression"
"Bug Tracker" = "https://github.com/ishandhanani/pc-regression/issues"
